main.css
html {
    scroll-behavior: smooth;
    font-family: 'Yusei Magic', sans-serif;
}

body {
    background-image: var(--bgWallpaper);
    height: 100vh;
    margin: 0;
    padding: 0;
}

::-webkit-scrollbar {
    width: 20px;
}

::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px var(--palette6);
}

::-webkit-scrollbar-thumb {
    background: var(--palette3);
}

::-webkit-scrollbar-thumb:hover {
    background: var(--palette2); 
}

a {
    cursor: pointer;
}

.TopMenu {
    background-color: var(--palette1);
    width: 100%;
    height: 10vh;
    display: flex;
    justify-content: space-between;
    position: fixed;
    top: 0;
    z-index: 2;
}

.MenuTitle {
    height: 100%;
    padding-left: 1vw;
}

.ModeToggle {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-right: 1vw;
}

.Menu {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-evenly;
}

.SocialsContainer {
    display: flex;
    justify-content: center;
}

.SocialsContainer a {
    padding: 4px !important;
}

.fa-facebook {
    background: #3B5998;
    color: white;
  }

.fa-instagram {
    background: #125688;
    color: white;
 }

.fa-linkedin {
    background: #007bb5;
    color: white;
}

.fa-whatsapp {
    background-color: #25d366;
    color: white;
}

.fa {
    padding: 20px;
    font-size: 30px;
    width: 30px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
  }

.fa:hover {
    opacity: 0.7;
}

.Home {
    padding-top: 10vh;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 85vh;
    position: relative;
}

.CharacterPic {
    padding-right: 3vw;
}

.MainContent {
    position: relative;
}

.Sun {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
}

.HelloText {
    padding-top: 5vh;
    padding-bottom: 5vh;
}

.HomeContent {
    display: flex;
    justify-content: center;
    font-size: min(4vw,4vh);
    color: var(--palette2);
    text-align: center;
    height: 30vh;
    text-shadow: 1px 1px 2px var(--palette3), 1px 1px 2px var(--palette3);   
}

.ModeToggle {
    float: right;
}

.ModeToggle a {
    position: relative;
    text-align: center;
    padding-top: 10px;
}

.menu li {
    padding-right: 3vw;
}

.ModeToggle a img{
    max-height: 9vh;
    max-width: 11vw;
}

.ModeToggle a span {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: var(--palette6);
    text-shadow: 0px 0px 3px #000000;
}


.MenuTitle img{
    padding-top: 1vh;
    max-height: 9vh;
    max-width: 20vw;
    min-width: 200px;
    float: left;
}


.Divider {
    width: 100%;
    height: 10vh;
    background-color: var(--palette1);
}

.DividerSmall {
    width: 100%;
    height: 5vh;
    background-color: var(--palette1);
    color: var(--palette2);
    text-align: center;
    padding-top: 1vh;
}

.DividerSmall a{
    color: inherit;
}

.AboutMe {
    position: relative;
    min-height: 85vh;
    display: flex;
    justify-content: center;
}

.Portfolio {
    position: relative;
    min-height: 85vh;
    display: flex;
    justify-content: center;
}

.HalfSunContainerTop {
    position: absolute;
    top: 0;
    z-index: 1;
}

.HalfSunContainerTop img {
    vertical-align: top;
    transform: rotate(180deg);
}

.HalfSunContainerTop span{
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: var(--palette2);
    font-size: 2.1rem;
    text-shadow: 1px 1px 2px var(--palette3), 1px 1px 2px var(--palette3);
}

.ContentHolder {
    min-height: 85vh;
    width: 70vw;
    background-color: var(--palette6op);
    overflow: auto;
}

.Content {
    padding: 15vh 3vw 10vh 3vw;
    color: var(--palette2);
    font-size: 1.5rem;
}

.PortfolioImg {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    text-align: center;
}

.PortfolioImg img {
    margin: 1vh 2vw;
    width: unset;
    height: unset;
    border: 3px solid var(--palette2);
}

.PortfolioImg img:hover {
    opacity: 0.5;
}

.BottomImg img{
    height: initial;
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: -1;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 3; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
    position: relative;
    background-color: var(--palette4);
    background-image: var(--bgContactme);
    background-repeat: no-repeat;
    background-position: top;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border: 5px solid var(--palette1);
    width: 70vw;
    height: 70vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@-webkit-keyframes animatetop {
  from {top:-300px; opacity:0} 
  to {top:0; opacity:1}
}

@keyframes animatetop {
  from {top:-300px; opacity:0}
  to {top:0; opacity:1}
}

/* The Close Button */
.close {
  color: white;
  font-size: 28px;
  font-weight: bold;
  align-self: flex-end;
  position: absolute;
  top: 0;
  padding-right: 1vw;
  z-index: 3;
}

.close:hover,
.close:focus {
  color: var(--palette2);
  text-decoration: none;
  cursor: pointer;
}

.character {
    opacity: 0.3;
    position: absolute;
    z-index: 0;
}

.CloudContainer {
    z-index: 2;
    position: relative;
    height: 10vh;
    text-align: center;
}

.CloudContainer span {
    left: 50%;
    top: 35%;
    transform: translate(-50%, -50%);
    position: absolute;
    color: var(--palette2);
    z-index: 1;
    font-size: 2rem;
}

.CloudContainer img {
    left: 50%;
    top: 30%;
    width: fit-content;
    height: fit-content;
    transform: translate(-50%, -50%);
    position: absolute;
}

.InfoContainer {
    display: flex;
    justify-content: space-evenly;
    height: 30vh;
}

.Info {
    width: 30vw;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.Info input {
    height: 5vh;
    color: var(--palette2);
    border: 2px solid var(--palette2);
    font-size: 2em;
    background-color: var(--palette6);
}

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: var(--palette2);
    opacity: 1; /* Firefox */
}
  
:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: var(--palette2);
}

::-ms-input-placeholder { /* Microsoft Edge */
    color: var(--palette2);
}


.Info textarea {
    resize: none;
    height: 100%;
    color: var(--palette2);
    border: 2px solid var(--palette2);
    font-size: 2rem;
    background-color: var(--palette6);
}

.ButtonsContainer {
    display: flex;
    justify-content: space-evenly;
}

.ButtonsContainer button {
    height: 5vh;
    color: var(--palette2);
    border: 2px solid var(--palette2);
    font-size: 2rem;
    background-color: var(--palette6);
}

img {
    width: 100%;
    height: 100%;
}

@media (max-width: 70em) {
    .CharacterPic {
        display: none;
    }
    .ContentHolder {
        width: 100vw;
    }
    .ModeToggle {
        padding-top: 10px;
    }
    .HomeContent {
        font-size: min(6vw,6vh);
    }
}

pre {
    white-space: pre-wrap;       /* Since CSS 2.1 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    font-family: inherit;
}

.UlStyle {
    list-style: none;
}

